--- a/translations/en-us.yaml
+++ b/translations/en-us.yaml
@@ -9,3 +9,13 @@ player:
   compatibility:
     warning: 'To view this video please enable JavaScript, and consider upgrading to a web browser that'
     linktext: 'supports HTML5 video'
+donate: DONATE
+chat:
+    title: Chat
+    new_messages: 'New messages below.'
+    offline: 'You appear to be offline. I guess you won''t be able to chat. Musta been the onion salad dressing'
+    send: Send
+    message_placeholder: 'enter your message here...'
+    join: 'Join chat'
+    nickname: nickname
+    gif: GIF
